--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,16 +1,43 @@
 <nav class="post-nav">
-  {% if page.previous %}
-  <a
-    class="post-nav-item post-nav-prev"
-    href="{{ page.previous | relative_url }}"
-  >
-    <div class="nav-arrow">Previous</div>
-    <span class="post-title">{{ page.previous.title }}</span>
-  </a>
-  {% endif %} {% if page.next %}
-  <a class="post-nav-item post-nav-next" href="{{ page.next | relative_url }}">
-    <div class="nav-arrow">Next</div>
-    <span class="post-title">{{ page.next.title }}</span>
-  </a>
-  {% endif %}
+  {% assign currentpage = page %}
+  {% for i in (1..50) %}
+    {% assign currentpage = currentpage.previous %}
+    {% if currentpage %}
+      {% if currentpage.tag != page.tag %}
+        {% continue %}
+      {% endif %}
+      <a class="post-nav-item post-nav-prev" href="{{ currentpage | relative_url }}">
+        <div class="nav-arrow">Previous</div>
+        <span class="post-title">{{ currentpage.title }}</span>
+      </a>
+      {% break %}
+    {% else %}
+      <a class="post-nav-item post-nav-prev">
+        <div class="nav-arrow">The page no longer exists.</div>
+        <span class="post-nolonger">x</span>
+      </a>
+      {% break %}
+    {% endif %}
+  {% endfor %}
+  
+  {% assign currentpage = page %}
+  {% for i in (1..50) %}
+    {% assign currentpage = currentpage.next %}
+    {% if currentpage %}
+      {% if currentpage.tag != page.tag %}
+        {% continue %}
+      {% endif %}
+      <a class="post-nav-item post-nav-next" href="{{ currentpage | relative_url }}">
+        <div class="nav-arrow">Next</div>
+        <span class="post-title">{{ currentpage.title }}</span>
+      </a>
+      {% break %}
+    {% else %}
+      <a class="post-nav-item post-nav-prev">
+        <div class="nav-arrow">The page no longer exists.</div>
+        <span class="post-nolonger">x</span>
+      </a>
+      {% break %}
+    {% endif %}
+  {% endfor %}
 </nav>
