--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,10 @@ layout: compress
 <html lang="{{ page.lang | default: site.lang | default: " en " }}">
 {% include header.html %}
 
+<head>
+  <meta name="google-site-verification" content="WsppNpnQVFxs4WxAyPv3lHalDyiTSvZ1qoT8OSrubeg" />
+</head>
+
 <body data-theme="{{ site.mode }}" class="notransition">
 
   <script>
