--- a/_sass/klise/_post.scss
+++ b/_sass/klise/_post.scss
@@ -8,7 +8,7 @@
 
 // Post title
 .header {
-  margin-top: 7.8em;
+  margin-top: 3em;
   margin-bottom: 3em;
 
   .tags {
@@ -79,11 +79,35 @@
     img {
       border-radius: 2px;
     }
-
+    .video {
+      position: relative;
+      width: 80%;
+      padding-bottom: 45%;
+      margin: auto;
+      iframe {
+        border-radius: 6px;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+      }
+    }
     figcaption {
       margin-top: 5px;
       font-style: italic;
       font-size: $small-font-size;
+    }
+    .special-container, .special-container-2{
+      margin: auto;
+      padding: 5%;
+      width: 60%;
+    }
+    .special-container-2{
+      width: 80%;
+    }
+    .special-img{
+        width: 100%;
+        transform: perspective(1000px) rotateX(0deg) rotateY(0deg);
+        transition: all 0.1s;
     }
   }
 
@@ -189,6 +213,120 @@
   h6 {
     @include relative-font-size(0.875);
   }
+
+
+  .title-image {
+    border-radius: 10px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    &:hover{
+      box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    }
+  }
+  .game-description {
+    text-align: center;
+  }
+  .screenshot-list{
+    display: flex;
+    figure {
+      padding:10px;
+    }
+  }
+
+  .wave-player{
+    div.error-txt{
+      width: 100%;
+      text-align: center;
+    }
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
+    background-color: rgb(230,230,230);
+    width: 100%;
+    overflow: hidden;
+    border-radius: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    
+    flex-direction: row;
+    align-items: center;
+    display: flex;
+    justify-content: flex-start;
+    div.audioTrack{
+      flex-direction: row;
+      align-items: center;
+      display: flex;
+      justify-content: flex-start;
+      width: 100%;
+      height: 100%;
+      div.audioCanvasDiv{
+        display: flex;
+        margin: 0px;
+        width: 100%;
+        height: 100%;
+        canvas {
+          cursor: pointer;
+          margin: 0px;
+          width: 100%;
+          height: 100%;
+          min-height: 60px;
+          max-height: 150px;
+          color: black;
+          --active-color: #ff6600;
+          --temp-color: #ffa365;
+          --current-color: #ff1100;
+          background-color: rgba(0,0,0,0);
+          overflow: hidden;
+          -webkit-tap-highlight-color: transparent;
+        }
+      }
+      div{
+        display: flex;
+        margin: auto;
+        small {
+          width: 60px;
+          max-width: 60px;
+          text-align: center;
+          white-space: nowrap;
+          font-size: $small-font-size - 2;
+          color: $gray;
+          opacity: 0.8;
+          -webkit-user-select:none;
+          -moz-user-select:none;
+          -ms-user-select:none;
+          user-select:none
+        }
+      }
+    }
+    div.audioButtonDiv{
+      margin-top: auto;
+      margin-bottom: auto;
+      flex-direction: row;
+      align-items: center;
+      display: flex;
+      justify-content: flex-start;
+      button {
+        padding: 10%;
+        img.buttonIcon {
+          --img-file-play: play-solid.svg;
+          --img-file-pause: pause-solid.svg;
+          width: 100%;
+          height: 100%;
+          fill: black;
+          opacity: 70%;
+        }
+        cursor: pointer;
+        margin-left: 10px;
+        background-color: rgb(230,230,230);
+        font-size: 0px;
+        border: none;
+        padding: 0px;
+        min-width: 30px;
+        min-height: 30px;
+        -webkit-tap-highlight-color: transparent;
+      }
+    }
+  }
 }
 
 .post-nav {
@@ -197,13 +335,18 @@
   margin-top: 5em;
   border-top: 1px solid $light;
   line-height: 1.4;
+  padding-bottom: 100px;
 
   .post-nav-item {
     border-bottom: 0;
     font-weight: $bold-weight;
     padding-bottom: 10px;
+    white-space: nowrap;
+    overflow: hidden;
 
     .post-title {
+      transition: all 0.2s ease-in-out;
+      letter-spacing: 0em;
       color: $black;
     }
 
@@ -212,7 +355,12 @@
       .post-title {
         color: $text-link-blue-active;
         opacity: 0.9;
+        letter-spacing: 0.1em;
       }
+    }
+
+    .post-nolonger {
+      color: #808080;
     }
 
     .nav-arrow {
