--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -14,8 +14,8 @@ $bold-weight: 700;
 
 //Light Colors
 $text-base-color: #434648;
-$text-link-blue: #003fff;
-$text-link-blue-active: #0036c7;
+$text-link-blue: #ff6600;
+$text-link-blue-active: #ff1100;
 
 $black: #0d122b;
 $light: #ececec;
@@ -36,7 +36,7 @@ $dark-gray: #767f87;
 
 // Width of the content area
 $wide-size: 890px;
-$narrow-size: 720px;
+$narrow-size: 810px;
 
 // Padding unit
 $spacing-full: 30px;
