--- a/_sass/klise/_base.scss
+++ b/_sass/klise/_base.scss
@@ -48,6 +48,8 @@ body {
   position: relative;
   color: $text-base-color;
   background-color: $white;
+  //background-image: url('/myblog/assets/img/bg_img2.png');
+  background-position-x: center;
   font: $normal-weight #{$base-font-size}/#{$base-line-height} $sans-family;
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
@@ -127,6 +129,9 @@ figure {
 figure > img {
   display: block;
   position: relative;
+  &:hover, &:focus{
+    cursor: pointer;
+  }
 }
 
 // Image caption
@@ -239,7 +244,7 @@ a {
   }
 
   &:focus {
-    outline: 3px solid rgba(0, 54, 199, 0.6);
+    outline: 3px solid rgba(255, 82, 119, 0.6);
     outline-offset: 2px;
   }
 }
@@ -365,5 +370,71 @@ mark,
     td {
       border: 0;
     }
+  }
+}
+
+.modal {
+  display: none;
+  opacity: 100%;
+  position: fixed;
+  z-index: 2;
+  padding-top: 10px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+  backdrop-filter: blur(8px);
+
+  &:hover, &:focus{
+    cursor: pointer;
+  }
+
+  .modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: scale(1) translate(-50%, -50%);
+    margin: auto;
+    display: block;
+    max-width: 95%;
+    max-height: 80%;
+    border: 2px solid #fff;
+    cursor: pointer;
+  }
+  
+  #modal-caption {
+    margin: auto;
+    display: block;
+    width: 100%;
+    text-align: center;
+    text-shadow: #000 0px 0 10px;
+    color: #fff;
+  }
+
+  .modal-content {
+    animation-name: zoom;
+    animation-duration: 0.2s;
+  }
+
+  #modal-caption {
+    animation-name: zoom2;
+    animation-duration: 0.2s;
+  }
+  
+  @keyframes zoom {
+    from {transform:scale(0) translate(-50%, -50%)}
+    to {transform:scale(1) translate(-50%, -50%)}
+  }
+
+  @keyframes zoom2 {
+    from {transform:scale(0)}
+    to {transform:scale(1)}
+  }
+
+  @keyframes fadein {
+    from{transform: opacity(0%)}
+    to{transform: opacity(100%)}
   }
 }
