--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -74,11 +74,26 @@ layout: compress
         </div>
       </article>
 
-      <!-- 모달 구조 추가 -->
-      <div id="myModal" class="modal" onclick="closeModal()">
-        <img class="modal-content" id="expandedImg" alt="Expanded Image">
+      <div id="myModal" class="modal">
+        <img class="modal-content">
         <div id="modal-caption"></div>
       </div>
+      <script>
+        var modal = document.getElementById("myModal");
+        modal.onclick = ()=>{ modal.style.display = "none"; };
+        var img = document.querySelectorAll("img");
+        var modalImg = document.querySelector(".modal-content");
+        var captionText = document.getElementById("modal-caption");
+        img.forEach(element => {
+          if(element.className !== "modal-content" && element.parentElement.tagName !== "A"){
+            element.onclick = function(){
+              modal.style.display = "block";
+              modalImg.src = this.src;
+              captionText.innerHTML = this.alt;
+            }
+          }
+        })
+      </script>
 
       {% if page.comments %}
         {% include comments.html %}
@@ -95,28 +110,6 @@ layout: compress
     {% include footer.html %}
   </div>
 
-  <script>
-    // 모달 기능 JavaScript
-    const modal = document.getElementById("myModal");
-    const modalImg = document.getElementById("expandedImg");
-    const captionText = document.getElementById("modal-caption");
-
-    // 페이지의 모든 이미지에 대해 클릭 이벤트 등록
-    document.querySelectorAll("img").forEach(img => {
-      if (img.className !== "modal-content" && img.parentElement.tagName !== "A") {
-        img.onclick = function () {
-          modal.style.display = "block";
-          modalImg.src = this.src;  // 클릭된 이미지의 src를 모달에 설정
-          captionText.innerHTML = this.alt;  // 이미지의 alt를 캡션에 표시
-        };
-      }
-    });
-
-    // 모달 클릭 시 닫기
-    function closeModal() {
-      modal.style.display = "none";
-    }
-  </script>
 </body>
 
 </html>
