--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,14 @@
   <a class="footer_item" href="javascript::void(0)">resume</a>
   <a class="footer_item" href="/feed.xml">rss</a>
   <span class="footer_item">&copy; {{ site.time | date: "%Y" }}</span>
+
+  <div style="text-align: center; margin-top: 10px;">
+    <a href="https://www.buymeacoffee.com/StudioMM" target="_blank">
+      <img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" 
+           alt="Buy Me a Coffee" style="height: 50px; width: 190px;">
+    </a>
+  </div>
+
   <small class="footer_copyright">
     <!-- Klisé Theme: https://github.com/piharpi/jekyll-klise -->
     <a
